Restyle book card and add social links to open in new tab.

--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -3,46 +3,65 @@
 {% block title %} Book Details - {{book.title}}{% endblock %}
 
 {% block content %}
-<div class="container ">
-    <img src="{{book.image.url}}" alt="{{book.image_alt}}" class="book_img">
-    <p class="name">{{book.title}}</p>
-    <p class="author">{{book.author}} </p>
-    <p class="summary">{{book.summary}}</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
 
-    {% if request.user == book.user %}
-    <div class="text-center">
-        <a href="{% url 'edit_book' book.id %}" class="edit_btn btn btn-success w-25">Edit</a>
-        <a href="#" class="delete_btn btn btn-success w-25" data-bs-toggle="modal"
-            data-bs-target="#delete-book-{{ book.id }}">Delete</a>
-    </div>
-    <!-- Modal: confirm deletion -->
-    <div class="modal fade" id="delete-book-{{ book.id }}" tabindex="-1"
-        aria-labelledby="delete-book-{{ book.id }}-label" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="delete-book-{{ book.id }}-label">Delete {{ book.title }}
-                    </h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Are you sure you want to delete this book?
-                    <br>
-                    {{ book.title }}
-                    <br>
-                    <small>This action is permanent, and cannot be undone.</small>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-success" data-bs-dismiss="modal">No</button>
-                    <a href="{% url 'delete_book' book.id %}" class="btn btn-danger">Yes</a>
+            <div class="card">
+                <div class="row g-0">
+                    <div class="col-md-4 mx-auto text-center">
+                        <img src="{{ book.image.url }}" alt="{{ book.image_alt }}" class="img-fluid rounded-start">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ book.title }}</h5>
+                            <p class="card-text">
+                                <strong>{{ book.author }}</strong>
+                            </p>
+                            <p class="card-text">
+                                <small class="text-body-secondary">
+                                    {{ book.summary }}
+                                </small>
+                            </p>
+                        </div>
+                        <div>
+                            {% if request.user == book.user %}
+                                <div class="text-center my-3">
+                                    <a href="{% url 'edit_book' book.id %}" class="edit_btn btn btn-success w-25">Edit</a>
+                                    <a href="#" class="delete_btn btn btn-success w-25" data-bs-toggle="modal"
+                                        data-bs-target="#delete-book-{{ book.id }}">Delete</a>
+                                </div>
+                                <!-- Modal: confirm deletion -->
+                                <div class="modal fade" id="delete-book-{{ book.id }}" tabindex="-1"
+                                    aria-labelledby="delete-book-{{ book.id }}-label" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h1 class="modal-title fs-5" id="delete-book-{{ book.id }}-label">Delete {{ book.title }}</h1>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                Are you sure you want to delete this book?
+                                                <br>
+                                                {{ book.title }}
+                                                <br>
+                                                <small>This action is permanent, and cannot be undone.</small>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-success" data-bs-dismiss="modal">No</button>
+                                                <a href="{% url 'delete_book' book.id %}" class="btn btn-danger">Yes</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    {% endif %}
 
 </div>
-
-
 
 {% endblock %}
