Validate home page.

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -25,11 +25,7 @@
 
       <!-- Github -->
       <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/hiboibrahim/thebookbooth1" target="_blank" rel="noreferrer noopener" role="button"
-        ><i class="fab fa-github"></i
-      ></a>
-    </section>
-    <!-- Section: Social media -->
-  </div>
+        ><i class="fab fa-github"></i></a>
 
   <!-- Copyright -->
   <div class="text-center p-3">
