--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -46,10 +46,14 @@
           {% endif %}
         </ul>
         <!-- Form for search bar -->
-        <form class="d-flex" role="search" method="GET" action="{% url 'books' %}">
-          <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        <form class="form-inline my-2 my-lg-0 d-flex flex-sm-row flex-column" role="search" method="GET" action="{% url 'search_results' %}">
+          <div class="input-group">
+              <input class="form-control form-control-sm mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search">
+              <div class="input-group-append">
+                  <button class="btn button-action ms-2 ms-sm-0" type="submit">Search</button>
+              </div>
+          </div>
+      </form>
       </div>
     </div>
   </nav>
