add screen shots and links for validation.

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -30,7 +30,7 @@
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
                 {% endif %}
-                <button class="btn btn-outline-success w-25 mb-2" type="submit">{% trans "Sign In" %}  </i></button>
+                <button class="btn btn-outline-success w-25 mb-2" type="submit">{% trans "Sign In" %} </button>
                 <a class="button secondaryAction d-block" href="{% url 'account_reset_password' %}"></a>
 
             </form>
