--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -8,20 +8,24 @@
 
 {% block content %}
 
-      <h1 class="text-center">{% trans "Signup" %}</h1>
+<h1 class="text-center">{% trans "Signup" %}</h1>
 
-      <p class="text-center"> {% blocktrans %}Welcome to The Book Booth. Already have an account? Then please <a href="{{ login_url }}">Sign
-          In</a>.{% endblocktrans %} </p>
+<p class="text-center"> {% blocktrans %}Welcome to The Book Booth. Already have an account? Then please <a
+    href="{{ login_url }}">Sign
+    In</a>.{% endblocktrans %} </p>
 
 <div class="row">
   <div class="col-md-8 mt-3 offset-md-2">
+
     <form class="form p-2" action="{% url 'account_signup' %}"> {% csrf_token %} {{ form | crispy }}
       {% if redirect_field_value %} <input type="hidden" name="{{ redirect_field_name }}"
-        value="{{ redirect_field_value }}"> {% endif %} 
-        <div class="text-center">
+        value="{{ redirect_field_value }}"> {% endif %}
+      <div class="text-center">
         <button type="submit" class="btn btn-success mb-2">Sign
-        Up </button> </form>
+          Up </button>
+      </div>
+  </form>
 
-    </div>
-  </div>
+</div>
 {% endblock content %}
+</div>
