--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -5,7 +5,7 @@
   <nav class="navbar navbar-expand-lg bg-white">
     <div class="container-fluid">
       <!-- Logo -->
-      <a class="navbar-brand d-none d-lg-block" href="#"><img src="{% static 'images/logo.png' %}"
+      <a class="navbar-brand d-none d-lg-block" href=""><img src="{% static 'images/logo.png' %}"
           alt="The Book Booth Logo" class="logo"></a>
 
 
@@ -46,14 +46,7 @@
           {% endif %}
         </ul>
         <!-- Form for search bar -->
-        <form class="form-inline my-2 my-lg-0 d-flex flex-sm-row flex-column" role="search" method="GET" action="{% url 'search_results' %}">
-          <div class="input-group">
-              <input class="form-control form-control-sm mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search">
-              <div class="input-group-append">
-                  <button class="btn button-action ms-2 ms-sm-0" type="submit">Search</button>
-              </div>
-          </div>
-      </form>
+       
       </div>
     </div>
   </nav>
